ch6/ch6-unhappy-path/builder-usage/tests/fails/build_enum.rs
use builder_macro::Builder;

#[derive(Builder)]
pub enum ExampleEnum {}

fn main() {}